fix align

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     width: 100%;
     max-width: 940px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .box{
@@ -21,7 +23,8 @@
 }
 
 .box_2{
-    margin-top: 400px;
+    margin-top: 500px;
+    align-self: flex-end;
 }
 
 *{
